Fixing navbar on mobile as per specs

--- a/less/main.less
+++ b/less/main.less
@@ -553,7 +553,6 @@ footer {
     }
 
     .navbar .navbar-collapse {
-        padding: 10px;
         max-height: none;
       }
 
@@ -644,6 +643,11 @@ footer {
       width: 100%;
       margin: 5px auto;
     }
+  }
+
+  .navbar-collapse {
+    right: -59px;
+    position: relative;
   }
 }
 
